# gitruck

./: .gitignore  README.md  pyproject.toml  requirements.txt  workbench.ipynb
.github/workflows/: tests.yml
gitruck/: __main__.py  gitruck.py  html.py
report/: index.html
src/: __main__.py  args.py  gitruck.py  html.py
tests/: test_args.py  test_gitruck.py  test_html.py
